--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,8 @@
 * {
   margin: 0;
   padding: 0;
-  font-size: 1rem;
+  font-size: 20px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  letter-spacing: 0.02rem;
 }
 
 body {
@@ -41,7 +40,7 @@ textarea {
 
 .title {
   font-weight: 700;
-  font-size: 1.3rem;
+  font-size: 24px;
   text-align: center;
 }
 
@@ -59,21 +58,15 @@ textarea {
 }
 
 .clear:hover {
-  background-color: #c0bdbd;
+  background-color: #f4f4f4;
 }
 
 .checkbox {
-  height: 1rem;
-  width: 1rem;
-  border: 3px solid #c0bdbd;
+  border: 3px solid #f4f4f4;
 }
 
 input::placeholder {
   font-style: italic;
-}
-
-.full {
-  width: 100%;
 }
 
 .btn {
@@ -85,20 +78,14 @@ input::placeholder {
 }
 
 .btn:hover {
-  background-color: #c0bdbd;
-}
-
-img {
-  width: 80%;
-  height: 80%;
-  filter: opacity(50%);
-  padding: 5%;
+  background-color: #f4f4f4;
 }
 
 .update {
-  margin-right: 1rem;
+  margin-right: 16px;
 }
 
-.task-text {
+.tasktext {
   padding-top: 10px;
+  width: 100%;
 }
